syntax = "proto3";

option csharp_namespace = "OrderServiceAPI.APIProto";

service OrderService{
  rpc PostOrder(Order) returns (PostResponse);
}

message Order{
  int32 CustomerId=1;
  int32 ProductId=2;
  int32 Quantity=3;
  int32 OrderPrice=4;
}
message PostResponse{
  bool Submitted=1;
  string Message=2;
}